--- a/package.json
+++ b/package.json
@@ -13,12 +13,9 @@
   "author": "@guilh & Treehouse students",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-router": "^2.7.0",
-    "concurrently": "^2.2.0",
     "bcryptjs": "*",
     "body-parser": "~1.15.1",
+    "concurrently": "^2.2.0",
     "connect-flash": "*",
     "cookie-parser": "~1.4.3",
     "crypto": "0.0.3",
@@ -30,12 +27,18 @@
     "express-session": "*",
     "express-validator": "*",
     "jsonwebtoken": "^7.1.9",
+    "material-ui": "^0.16.0",
     "mongodb": "*",
     "mongoose": "^4.6.0",
     "morgan": "~1.7.0",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-router": "^2.7.0",
+    "react-tag-input": "^4.3.3",
+    "react-tap-event-plugin": "^1.0.0",
     "readline": "^1.3.0",
     "serve-favicon": "~2.3.0"
   },
